# jarvis

./: .gitignore  .npmignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _batch_write.ts  package.json
skills/clawhub/: SKILL.md
skills/github/: SKILL.md
skills/memory/: SKILL.md
skills/my/: SKILL.md
skills/rock-arrangement/: SKILL.md
skills/skill-creator/: SKILL.md
skills/summarize/: SKILL.md
skills/tmux/: SKILL.md
skills/weather/: SKILL.md
src/: cli.ts  config.ts  jarvis.ts  nanobot.ts
src/agent/: consolidator.test.ts  consolidator.ts  context.test.ts  context.ts  hook.ts  loop.test.ts  loop.ts  memory.test.ts  memory.ts  runner.test.ts  runner.ts  session.ts  skills.test.ts  skills.ts  subagent.test.ts  subagent.ts
src/api/: server.ts
src/bus/: events.ts  index.ts  message-bus.test.ts  message-bus.ts  queue.ts
src/channels/: base.ts  dingtalk.ts  discord.ts  email.ts  feishu.ts  index.ts  manager.ts  other.ts  registry.ts  slack.ts  telegram.ts  websocket.ts  wecom.ts  weixin.ts  whatsapp.ts
src/cli/: commands.ts  history.ts  stream.ts
src/command/: builtin.ts  router.test.ts  router.ts
src/config/: loader.ts  paths.ts  schema.ts
src/cron/: index.ts  parser.ts  service.ts  types.ts
src/heartbeat/: service.ts
src/providers/: anthropic.test.ts  anthropic.ts  azure.ts  base.ts  (+8 more)
templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
tui/: agent.py  main.py  pyproject.toml  stream.py  utils.py
tui/jarvis_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
types/: marked-terminal.d.ts
(+59 files in other folders)
