[project]
name = "jarvis-tui"
version = "1.0.0"
description = "jarvis terminal UI — Python TUI for the jarvis AI agent"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "typer>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
jarvis = "main:app"


[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main", "agent", "stream", "utils"]
